--- a/CSS/index-Stylesheet.css
+++ b/CSS/index-Stylesheet.css
@@ -1,3 +1,4 @@
+/*scc word altijd tijdleijk opgeslaagen met cntrl + f5!*/
 body
 {
         margin:0;
@@ -43,7 +44,14 @@ footer
         position: absolute;
         bottom: 0px;
         background-color: lightgrey;
-        height: 7vh; /* van 4 naar 7 dat ziet er beter uit maar werkt niet. hulp vraagen.*/
+        height: 7vh;
         width:100%;
         text-align: center;
 }
+
+.StPaSc
+{
+        height: 80px;
+        width: 80px;
+}
+
